<resources>
    <string name="app_name">MyFirstAndroidApp</string>
    <string name="friends_list">Friends List</string>
    <string name="event_list">Event List</string>
    <string name="to_do_list">To do list</string>
    <string name="label">labelstring</string>
    <string name="updateButton">Update</string>
    <string name="username">user_name</string>
    <string name="password">password</string>
    <string name="dialog_fire_missiles">test</string>
    <string name="fire">fff</string>
    <string name="cancel">cancel</string>
    <string name="signin">ok</string>
    <string name="add">Add</string>
    <string name="Cancel">Cancel</string>
    <string name="todo">TODO</string>
    <string name="event_name">Event name</string>
    <string name="event_location">Event location</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_geolocate">Pick Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="event_time">event time</string>
    <string name="event_date">event date</string>
    <string name="google_maps_key">AIzaSyAuSo6_VodkJ5pvrk1CiBg3BhvwkvvRNrk</string>
    <integer name="TaskID">1000</integer>
    <string-array name="task_types">
        <item>All</item>
        <item>Completed</item>
        <item>Uncompleted</item>
    </string-array>
</resources>