<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/eventCheckBox"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:focusable="false" />

        <ImageView
            android:id="@+id/eventFlag"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="0px"
            android:layout_marginTop="0px"
            android:layout_marginEnd="0dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_launcher_background"></ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/eventNameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_name"></TextView>

        <TextView
            android:id="@+id/eventLocationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_location" />

        <TextView
            android:id="@+id/eventTimeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_time" />

        <TextView
            android:id="@+id/eventDateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_date" />
    </LinearLayout>


</LinearLayout>
